--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Install Yarn') {
             steps{
                 echo "Installing yarn..."
-                sh 'sudo curl -fsSL https://deb.nodesource.com/setup_14.x | bash -'
+                sh 'sudo -A curl -fsSL https://deb.nodesource.com/setup_14.x | bash -'
                 sh 'sudo apt-get install -y nodejs'
                 sh 'sudo npm install -g yarn@1.22.17'
             }
