--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -1,12 +1,16 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            image 'node:14.17.0'
+        }
+    }
 
     stages {
         stage('Install Yarn') {
             steps{
                 echo "Installing yarn..."
-                sh 'sudo -A curl -fsSL https://deb.nodesource.com/setup_14.x | bash -'
-                sh 'sudo apt-get install -y nodejs'
+                // sh 'sudo -A curl -fsSL https://deb.nodesource.com/setup_14.x | bash -'
+                // sh 'sudo apt-get install -y nodejs'
                 sh 'sudo npm install -g yarn@1.22.17'
             }
         }
