--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
                 echo "Installing yarn..."
                 // sh 'sudo -A curl -fsSL https://deb.nodesource.com/setup_14.x | bash -'
                 // sh 'sudo apt-get install -y nodejs'
-                sh 'sudo npm install -g yarn@1.22.17'
+                sh 'npm install -g yarn@1.22.17'
             }
         }
         
