--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -12,9 +12,9 @@ pipeline {
                 // sh 'sudo -A curl -fsSL https://deb.nodesource.com/setup_14.x | bash -'
                 // sh 'sudo apt-get install -y nodejs'
                 // sh 'npm install -g yarn@1.22.17'
-                // sh 'npm install'
                 sh 'node --version'
                 sh 'ls'
+                sh 'sudo npm install'
             }
         }
         
